# CUDAProject

./: .gitignore  CMakeLists.txt  initialize.cu  lin_smem.cu  main.cu  naive.cu  pad.cu  pad_smem.cu  smem.cu  transpose_padding.cu  utils.h
CUDAProjectNsightCompute/: CUDAProjectNsightCompute.ncu-proj
nsight/: nsight.ncu-proj
